Make the shell script span multiple lines.

--- a/sample.cfg
+++ b/sample.cfg
@@ -44,7 +44,9 @@ address = 192.168.21.2/24
 # shell scripts
 # available variables: $iface, $addr, $prefixlen, $hostname
 
-tun-up = ip link set $iface up; ip addr add $addr/$prefixlen dev $iface
+tun-up =
+    ip link set $iface up;
+    ip addr add $addr/$prefixlen dev $iface
 
 [encryption]
 
