--- a/sample.cfg
+++ b/sample.cfg
@@ -54,4 +54,4 @@ tun-up =
 scheme = fernet
 
 # generate a PSK using generate_fernet_key.py
-psk = 4jvhUciftnJVUqqb1K19Iw34vErok1v-Qokjvb_vyY8=
+psk = <you'll need to generate your own>
