Change the default iface name.

--- a/sample.cfg
+++ b/sample.cfg
@@ -34,7 +34,7 @@ maintenance_interval_sec = 30
 
 # name of the tun interface
 # default: tun%d
-interface = tunB
+interface = tun%d
 
 # address + prefix length of the associated subnet
 address = 192.168.21.2/24
