Restart VPN after outages.

--- a/sample.cfg
+++ b/sample.cfg
@@ -30,6 +30,9 @@ ping_timeout_sec = 300
 # maintenance includes purging timed out peer connections etc.
 maintenance_interval_sec = 30
 
+# wait before restarting the VPN after network outages etc.
+restart_delay_sec = 30
+
 [tun]
 
 # name of the tun interface
