Add explicit ipv6 support.

--- a/sample.cfg
+++ b/sample.cfg
@@ -40,16 +40,31 @@ restart_delay_sec = 30
 interface = tun%d
 
 # address + prefix length of the associated subnet
-address = 192.168.21.2/24
+ipv4_address = 192.168.21.2/24
+
+# Recommended ipv6 address scheme:
+# * 8-bit ULA prefix (0xfd)
+# * 40-bit routing prefix (randomly generated)
+# * 16-bit subnet id
+# * 64-bit host id
+#
+# ipv6_address = fd__:____:____:0000::1/64
 
 [scripts]
 
 # shell scripts
 # available variables: $iface, $addr, $prefixlen, $hostname
+#
+# tun_setup will always be called, and it will be called first (if defined)
+# afterwards, ipv4 and ipv6 commands will be executed (in an undefined order)
 
-tun-up =
-    ip link set $iface up;
-    ip addr add $addr/$prefixlen dev $iface
+tun_setup = ip link set $iface up
+tun_setup_ipv4 = ip addr add $addr/$prefixlen dev $iface
+tun_setup_ipv6 = ip -6 addr add $addr/$prefixlen dev $iface
+
+example_of_a_long_script =
+    echo you can indent commands like this;
+    echo to get multiple-line scripts
 
 [encryption]
 
