Open tun iface on mac os x differently.

--- a/sample.cfg
+++ b/sample.cfg
@@ -37,6 +37,7 @@ restart_delay_sec = 30
 
 # name of the tun interface
 # default: tun%d
+# for Mac OS X, use /dev/tun0 or similar
 interface = tun%d
 
 # address + prefix length of the associated subnet
