Add config samples for Mac OS X.

--- a/sample.cfg
+++ b/sample.cfg
@@ -37,7 +37,7 @@ restart_delay_sec = 30
 
 # name of the tun interface
 # default: tun%d
-# for Mac OS X, use /dev/tun0 or similar
+# for Mac OS X, use /dev/tun8 or similar
 interface = tun%d
 
 # address + prefix length of the associated subnet
@@ -49,7 +49,7 @@ ipv4_address = 192.168.21.2/24
 # * 16-bit subnet id
 # * 64-bit host id
 #
-# ipv6_address = fd__:____:____:0000::1/64
+# ipv6_address = fd__:____:____:0001::1/64
 
 [scripts]
 
@@ -63,9 +63,26 @@ tun_setup = ip link set $iface up
 tun_setup_ipv4 = ip addr add $addr/$prefixlen dev $iface
 tun_setup_ipv6 = ip -6 addr add $addr/$prefixlen dev $iface
 
-example_of_a_long_script =
-    echo you can indent commands like this;
-    echo to get multiple-line scripts
+# On Mac OS X, you can use the following:
+#
+#tun_setup = /sbin/ifconfig tun8 up
+#
+#tun_setup_ipv4 =
+#	/sbin/ifconfig tun8 192.168.21.2 192.168.21.254;
+#	/sbin/route -n add -net 192.168.21.0/24 192.168.21.254
+#
+#  ^^ the above will fake routing through a point-to-point interface
+#     by saying that tun8 is P-to-P to .21.254, and then using .21.254 as the gateway
+#     The gateway needn't exist; it's just a hack to convince the OS to route packets through tun8.
+#     Once the packet is in the tunnel, the VPN will route it correctly.
+#
+#tun_setup_ipv6 =
+#	/sbin/ifconfig tun8 inet6 alias fd__:____:____:0001::8;
+#	/sbin/route -n delete -inet6 fd__:____:____:0001::/64;
+#	/sbin/route -n add -inet6 -net fd__:____:____:0001::/64 -interface tun8
+#
+# ^^ for some reason, my OSX adds a strange route for the /64 subnet
+#    this script deletes it and sets an explicit route via tun8
 
 [encryption]
 
