Update the sample config file.

--- a/sample.cfg
+++ b/sample.cfg
@@ -37,7 +37,13 @@ restart_delay_sec = 30
 
 # name of the tun interface
 # default: tun%d
-# for Mac OS X, use /dev/tun8 or similar
+#
+# For Mac OS X, use a full static path: /dev/tun8 or similar.
+#
+# Linux supports dynamic numbering; use just the name tun-blah%d or just tun-blah,
+# without the path.
+#
+# TAP devices are not supported at the moment (not that it would be hard to do).
 interface = tun%d
 
 # address + prefix length of the associated subnet
@@ -81,8 +87,8 @@ tun_setup_ipv6 = ip -6 addr add $addr/$prefixlen dev $iface
 #	/sbin/route -n delete -inet6 fd__:____:____:0001::/64;
 #	/sbin/route -n add -inet6 -net fd__:____:____:0001::/64 -interface tun8
 #
-# ^^ for some reason, my OSX adds a strange route for the /64 subnet
-#    this script deletes it and sets an explicit route via tun8
+#  ^^ for some reason, my OSX adds a strange route for the /64 subnet
+#     this script deletes it and sets an explicit route via tun8
 
 [encryption]
 
