Fix default tunnel name.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -36,7 +36,7 @@ restart_delay_sec = 10
 [tun]
 
 # name of the tun interface
-# default: tun%d
+# default: tun%%d   <- note the double percent sign
 #
 # For Mac OS X, use a full static path: /dev/tun8 or similar.
 #
@@ -44,7 +44,7 @@ restart_delay_sec = 10
 # without the path.
 #
 # TAP devices are not supported at the moment (not that it would be hard to do).
-interface = tun%d
+interface = tun%%d
 
 # address + prefix length of the associated subnet
 ipv4_address = 192.168.21.2/24
