Advertise via broadcast on LAN.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -4,6 +4,12 @@
 address = 0.0.0.0
 port    = 3732
 
+# broadcast advertisements on LAN because nat punching often does not work
+# when two clients are behind the same router
+# address 255.255.255.255,
+# ports comma-separated below
+lan_advert_ports = 3731, 3732
+
 # internal: select() timeout
 #select_interval_sec = 5
 
