Fix a bug, update sample config.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -103,3 +103,11 @@ scheme = fernet
 
 # generate a PSK using generate_fernet_key.py
 psk = <you'll need to generate your own>
+
+# xxx HACK xxx
+# comma-separated list of ports that should not be encrypted
+# this is meant to alleviate problems with CPU usage
+# when running high-volume data through the VPN (e.g. rsync backups)
+#
+# default: none
+unencrypted_tcp_ports = 22
