Fix syntax highlighting on GitHub by removing an apostrophe.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -102,7 +102,7 @@ tun_setup_ipv6 = ip -6 addr add $addr/$prefixlen dev $iface
 scheme = fernet
 
 # generate a PSK using generate_fernet_key.py
-psk = <you'll need to generate your own>
+psk = <generate your own using ./generate_fernet_key.py>
 
 # xxx HACK xxx
 # comma-separated list of ports that should not be encrypted
