--- a/sample-minimal.cfg
+++ b/sample-minimal.cfg
@@ -10,4 +10,4 @@ tun_setup = ip link set $iface up
 tun_setup_ipv4 = ip addr add $addr/$prefixlen dev $iface
 
 [encryption]
-psk = <you'll need to generate your own>
+psk = <generate your own using ./generate_fernet_key.py>
