Add TAP support.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -41,6 +41,10 @@ restart_delay_sec = 10
 
 [tun]
 
+# "tun" or "tap"
+# default: tun
+type = tun
+
 # name of the tun interface
 # default: tun%%d   <- note the double percent sign
 #
@@ -48,8 +52,6 @@ restart_delay_sec = 10
 #
 # Linux supports dynamic numbering; use just the name tun-blah%d or just tun-blah,
 # without the path.
-#
-# TAP devices are not supported at the moment (not that it would be hard to do).
 interface = tun%%d
 
 # address + prefix length of the associated subnet
