Add UDP exemptions.

--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -113,3 +113,4 @@ psk = <generate your own using ./generate_fernet_key.py>
 #
 # default: none
 unencrypted_tcp_ports = 22
+unencrypted_udp_ports = 1194
