--- a/sample-full.cfg
+++ b/sample-full.cfg
@@ -104,7 +104,7 @@ tun_setup_ipv6 = ip -6 addr add $addr/$prefixlen dev $iface
 scheme = fernet
 
 # generate a PSK using generate_fernet_key.py
-psk = abcd123abcd12abcd123abcd12
+psk = <generate your own using ./generate_fernet_key.py>
 
 # xxx HACK xxx
 # comma-separated list of ports that should not be encrypted
