--- a/config.cfg
+++ b/config.cfg
@@ -9,10 +9,10 @@ advert_interval_sec = 60
 
 [vpn]
 hostname = client
-ping_interval_sec = 30
-ping_timeout_sec = 30
-maintenance_interval_sec = 30
-restart_delay_sec = 30
+ping_interval_sec = 99999999
+ping_timeout_sec = 99999999
+maintenance_interval_sec = 99999999
+restart_delay_sec = 99999999
 
 [tun]
 interface = tun%%d
