--- a/mypy.ini
+++ b/mypy.ini
@@ -10,7 +10,7 @@ warn_return_any = True
 warn_no_return = True
 warn_unreachable = True
 
-pretty = True
+#pretty = True
 
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
